--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Persons List</title>
+    <title>Book List</title>
 </head>
 <body>
 <span style="display: none" id="numberPage" th:text="${nextPage}"></span>
